--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>Abdillah Naufal Lesmana</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="js/jquery.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
-    <script src="node_modules/luxy.js/dist/js/luxy.js"></script>
+    <script src="node_modules/luxy.js/dist/js/luxy.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -446,9 +445,8 @@
     </main>
     <script src="js/script.js"></script>
     <script src="js/form.js"></script>
-    <script src="js/anime.js" type="module"></script>
     <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script src="node_modules/luxy.js/dist/js/luxy.js"></script>
+    <script src="node_modules/luxy.js/dist/js/luxy.min.js"></script>
     <script>
       (function () {
         emailjs.init("iSpIqR58C30ehPrAg");
@@ -457,7 +455,7 @@
     <script>
       AOS.init();
     </script>
-    <script charset="utf-8">
+    <script type="text/javascript" charset="utf-8">
       luxy.init({
         wrapper: "#luxy",
         wrapperSpeed: 0.08,
