--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
-    <script src="node_modules/luxy.js/dist/js/luxy.min.js"></script>
+    <script src="node_modules/luxy.js/dist/js/luxy.js" charset="utf-8"></script>
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css" />
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -446,7 +446,10 @@
     <script src="js/script.js"></script>
     <script src="js/form.js"></script>
     <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script src="node_modules/luxy.js/dist/js/luxy.min.js"></script>
+    <script
+      src="node_modules/luxy.js/dist/js/luxy.min.js"
+      charset="utf-8"
+    ></script>
     <script>
       (function () {
         emailjs.init("iSpIqR58C30ehPrAg");
