--- a/index.html
+++ b/index.html
@@ -124,7 +124,15 @@
                 />
               </div>
               <div class="about-text">
-                <h2>Halo Semuanya 👋</h2>
+                <div class="about-open" style="display: flex">
+                  <h2>Halo Semuanya</h2>
+                  <img
+                    src="images/waving-hi-unscreen.gif"
+                    width="10%"
+                    height="auto"
+                    alt=""
+                  />
+                </div>
                 <p>
                   Saya Abdillah Naufal Lesmana lahir di kota Jakarta dan
                   sekarang berdomisili di kota Bogor. Saya adalah seorang
@@ -137,7 +145,9 @@
                 </p>
                 <div class="sayhi">
                   <!-- HTML !-->
-                  <button class="button-86" role="button">Say Hi</button>
+                  <a href="https://wa.me/087843951611" target="_blank"
+                    ><button class="button-86">Say Hi</button></a
+                  >
                 </div>
               </div>
             </div>
@@ -213,7 +223,6 @@
             penjelasan dari mobil ikonik dari Audi yaitu Audi R8, layanan dari
             Audi, dan juga Electric cars dari Audi USA.
           </p>
-          <!-- HTML !-->
           <a
             href="https://audi-pamijahan.abdillahnaufal1.repl.co/"
             target="_blank"
@@ -221,9 +230,6 @@
               <span class="text">See Details</span><span>Click me</span>
             </button></a
           >
-        </div>
-        <div class="project-image">
-          <img src="/images/bot.png" width="95%" alt="" />
         </div>
         <div class="project-description">
           <h1>MF Chat Bot</h1>
@@ -233,12 +239,14 @@
             provide responses based on the input it receives. this Bot is really
             smart, you can ask whatever as you want
           </p>
-          <!-- HTML !-->
           <a href="https://github.com/abdFal/MF-ChatBot" target="_blank"
             ><button class="button-57" role="button">
               <span class="text">See Details</span><span>Click me</span>
             </button></a
           >
+        </div>
+        <div class="project-image">
+          <img src="/images/bot.png" width="95%" alt="" />
         </div>
         <div class="project-image">
           <img src="/images/sch.png" width="95%" alt="" />
@@ -250,16 +258,13 @@
             Bogor, ini sebenarnya adalah project pertama saya ketika belajar
             dasar front end web Development dan dengan html css native.
           </p>
-          <!-- HTML !-->
           <a href="https://github.com/abdFal/School-Website" target="_blank"
             ><button class="button-57" role="button">
               <span class="text">See Details</span><span>Click me</span>
             </button></a
           >
         </div>
-        <div class="project-image">
-          <img src="/images/todo.png" width="95%" alt="" />
-        </div>
+
         <div class="project-description">
           <h1>Todo List App</h1>
           <p>
@@ -268,12 +273,14 @@
             kalian bisa membuat, mengedit, dan menghapus jadwal sesuatu yang
             kalian ingin lakukan
           </p>
-          <!-- HTML !-->
           <a href="https://github.com/abdFal/Todo-List-App" target="_blank"
             ><button class="button-57" role="button">
               <span class="text">See Details</span><span>Click me</span>
             </button></a
           >
+        </div>
+        <div class="project-image">
+          <img src="/images/todo.png" width="95%" alt="" />
         </div>
       </div>
 
