fixing typed js and splide js

--- a/index.html
+++ b/index.html
@@ -4,22 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Abdillah Naufal Lesmana</title>
+    <title>ANL. Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
-    <script src="js/luxy.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css" />
     <link
       rel="stylesheet"
       href="node_modules/@splidejs/splide/dist/css/splide.min.css"
     />
-    <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script
-      src="https://kit.fontawesome.com/b2c7ef89be.js"
-      crossorigin="anonymous"
-    ></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -30,6 +22,14 @@
     />
     <!-- icon -->
     <link rel="icon" href="images/Logo.png" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/kursor@0.0.14/dist/kursor.js"></script>
+    <script
+      src="https://kit.fontawesome.com/b2c7ef89be.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/script.js"></script>
   </head>
   <!-- preloader -->
@@ -51,7 +51,7 @@
       <nav class="navbar">
         <div class="navbar-item">
           <div class="logo">
-            <a href=""><span class="my">ANL.</span>Portofolio</a>
+            <a href=""><span class="my">ANL.</span>Portfolio</a>
           </div>
           <ul class="menu">
             <li><a href="#home" class="menu-btn">Home</a></li>
@@ -68,24 +68,15 @@
       <section class="home" id="home">
         <div class="header">
           <div class="img-head">
-            <img
-              src="/images/muka.png"
-              width="100%"
-              height="auto"
-              alt=""
-              data-aos="fade-up"
-              data-aos-once="true"
-            />
+            <img src="/images/muka.png" width="100%" height="auto" alt="" />
           </div>
-          <div class="head-desc" data-aos="fade-up" data-aos-once="true">
+          <div class="head-desc">
             <div class="home-content">
               <div class="text-1">Hello, my name is</div>
               <div class="text-2">
                 <h3>Abdillah Naufal <span>Lesmana</span></h3>
               </div>
-              <div class="text-3">
-                I'm a <span class="typing">Software Developer</span>
-              </div>
+              <div class="text-3">I'm a <span class="typing"></span></div>
               <a class="cv" href="/images/CV.jpg" download="">Download my CV</a>
               <div class="mysocial">
                 <a href="https://linkedin.com/in/naufallsmn"
@@ -158,7 +149,11 @@
           </section>
         </article>
       </div>
-
+      <div class="con">
+        <div class="con-con">
+          <h1 class="scroll-down">SCROLL DOWN</h1>
+        </div>
+      </div>
       <!-- interest section -->
       <div class="carousell">
         <div class="carousel-title"><h3>My Experiences</h3></div>
@@ -202,23 +197,29 @@
               </li>
               <li class="splide__slide">
                 <div class="image-carousel">
-                  <img src="images/IMG-20221105-WA0028.jpg" alt="" />
+                  <img
+                    src="images/WhatsApp Image 2023-05-08 at 09.44.25.jpeg"
+                    alt=""
+                  />
                 </div>
                 <div class="slide-desc">
                   <p>
-                    Attend on eFishery technival event at Microsoft Office on
-                    5th November 2022
+                    Being the UI UX trainer on IDN IT Camp event 3rd batch,
+                    making design for food e commerce mobile app.
                   </p>
                 </div>
               </li>
               <li class="splide__slide">
                 <div class="image-carousel">
-                  <img src="images/IMG-20221105-WA0028.jpg" alt="" />
+                  <img
+                    src="images/WhatsApp Image 2023-05-08 at 09.44.25 (1).jpeg"
+                    alt=""
+                  />
                 </div>
                 <div class="slide-desc">
                   <p>
-                    Attend on eFishery technival event at Microsoft Office on
-                    5th November 2022
+                    Being the UI UX trainer on IDN IT Camp event 3rd batch,
+                    making design for food e commerce mobile app.
                   </p>
                 </div>
               </li>
