--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/kursor/dist/kursor.css" />
-    <link
-      rel="stylesheet"
-      href="node_modules/@splidejs/splide/dist/css/splide.min.css"
-    />
+    <link rel="stylesheet" href="splide.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -553,7 +550,7 @@
     </main>
     <script src="js/script.js"></script>
     <script src="js/form.js"></script>
-    <script src="node_modules/@splidejs/splide/dist/js/splide.min.js"></script>
+    <script src="js/splide.min.js"></script>
     <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
     <script src="js/luxy.js" charset="utf-8"></script>
     <script>
