--- a/index.html
+++ b/index.html
@@ -347,16 +347,17 @@
           <img src="/images/bot.png" width="95%" alt="" />
         </div>
         <div class="project-image">
-          <img src="/images/sch.png" width="95%" alt="" />
+          <img src="/images/opti.png" width="95%" alt="" />
         </div>
         <div class="project-description">
-          <h1>School Website</h1>
+          <h1>Optilife Website</h1>
           <p>
-            Kalo ini adalah website sekolah saya yaitu IDN Boarding School
-            Bogor, ini sebenarnya adalah project pertama saya ketika belajar
-            dasar front end web Development dan dengan html css native.
+            This is a website that I created with 3 of my school friends.
+            OptiLife is a health service that focuses on holistic health to
+            improve the quality of life of patients. and this is the project we
+            worked on for 4 days
           </p>
-          <a href="https://github.com/abdFal/School-Website" target="_blank"
+          <a href="https://optilive-1.abdillahnaufal1.repl.co/" target="_blank"
             ><button class="button-57" role="button">
               <span class="text">See Details</span><span>Click me</span>
             </button></a
