--- a/index.html
+++ b/index.html
@@ -393,14 +393,14 @@
           <img src="/images/todo.png" width="95%" alt="" />
         </div>
         <div class="project-description">
-          <h1>Todo List App</h1>
+          <h1>Laracamp</h1>
           <p>
-            Ini Merupakan aplikasi web yang saya buat menggunakan bahasa
-            pemrograman php native, dengan tampilan framework Bootstrap5.2,
-            kalian bisa membuat, mengedit, dan menghapus jadwal sesuatu yang
-            kalian ingin lakukan
+            laracamp is a learning training class website that I created using
+            laravel9, this is the final website project of the class at
+            buildwithangga, and contains quite complete features from oauth
+            google to payment gateway.
           </p>
-          <a href="https://github.com/abdFal/Todo-List-App" target="_blank"
+          <a href="https://github.com/abdFal/Laracamp" target="_blank"
             ><button class="button-57" role="button">
               <span class="text">See Details</span><span>Click me</span>
             </button></a
@@ -427,6 +427,24 @@
               alt=""
             />
             <img src="/images/sertifikat_course_page-0001.jpg" alt="" />
+          </div>
+          <div class="certificate-img">
+            <img
+              src="/images/sertifikat_course_292_2555900_190523060351_page-0001.jpg"
+              alt=""
+            />
+            <img
+              src="/images/sertifikat_course_297_2555900_210523102757_page-0001.jpg"
+              alt=""
+            />
+            <img
+              src="/images/sertifikat_course_302_2555900_190523085435_page-0001.jpg"
+              alt=""
+            />
+            <img
+              src="/images/sertifikat_course_317_2555900_190523220049_page-0001.jpg"
+              alt=""
+            />
           </div>
         </section>
       </article>
