add luxspace and teaching

--- a/index.html
+++ b/index.html
@@ -154,6 +154,9 @@
           </section>
         </article>
       </div>
+      <div class="routines">
+        <img src="images/Routines.png" alt="" width="100%" />
+      </div>
       <div class="con">
         <div class="con-con">
           <h1 class="scroll-down">SCROLL DOWN</h1>
@@ -236,6 +239,50 @@
                   <p>
                     Attend on Google Developer Group event in Bogor on 5th
                     December 2022
+                  </p>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <div class="image-carousel">
+                  <img src="images/20230709_130304.jpg" alt="" />
+                </div>
+                <div class="slide-desc">
+                  <p>
+                    Attend on Google IO Extended event in Pakuan University on
+                    9th July 2023
+                  </p>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <div class="image-carousel">
+                  <img src="images/20230709_161223.jpg" alt="" />
+                </div>
+                <div class="slide-desc">
+                  <p>
+                    Attend on Google IO Extended event in Pakuan University on
+                    9th July 2023
+                  </p>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <div class="image-carousel">
+                  <img src="images/IMG-20230625-WA0097.jpg" alt="" />
+                </div>
+                <div class="slide-desc">
+                  <p>
+                    Being the trainer of Google IT Support and Laravel basic on
+                    University on cirebon June 2023
+                  </p>
+                </div>
+              </li>
+              <li class="splide__slide">
+                <div class="image-carousel">
+                  <img src="images/IMG-20230626-WA0008.jpg" alt="" />
+                </div>
+                <div class="slide-desc">
+                  <p>
+                    Being the trainer of Google IT Support and Laravel basic on
+                    University on cirebon June 2023
                   </p>
                 </div>
               </li>
@@ -356,6 +403,24 @@
           >
         </div>
         <div class="project-image">
+          <img src="/images/Luxsapace.png" width="95%" alt="" />
+        </div>
+        <div class="project-description">
+          <h1>Laravel E-Commerce App</h1>
+          <p>
+            Luxspace is a sophisticated and feature-packed web application
+            developed using the Laravel framework and Jetstream package. It
+            serves as a comprehensive real estate platform, providing users with
+            a seamless experience for browsing, searching, and managing property
+            listings.
+          </p>
+          <a href="https://github.com/abdFal/Luxyspace" target="_blank"
+            ><button class="button-57" role="button">
+              <span class="text">See Details</span><span>Click me</span>
+            </button></a
+          >
+        </div>
+        <div class="project-image">
           <img src="/images/quiz.png" width="95%" alt="" />
         </div>
         <div class="project-description">
@@ -413,6 +478,10 @@
       <article>
         <section class="certificate">
           <div class="title">Certificate</div>
+          <div class="google-certificates">
+            <img src="/images/digitalgarage_certificate_page-0001.jpg" alt="" />
+            <img src="/images/Coursera ANRUCUQ2YTVQ_page-0001.jpg" alt="" />
+          </div>
           <div class="certificate-img">
             <img
               src="/images/sertifikat_course_256_2555900_041022134445_page-0001.jpg"
@@ -607,8 +676,8 @@
     <script src="js/script.js"></script>
     <script src="js/form.js"></script>
     <script src="js/splide.min.js"></script>
+    <script src="js/luxy.js"></script>
     <script src="https://cdn.emailjs.com/sdk/2.3.2/email.min.js"></script>
-    <script src="js/luxy.js" charset="utf-8"></script>
     <script>
       (function () {
         emailjs.init("iSpIqR58C30ehPrAg");
