--- a/index.html
+++ b/index.html
@@ -64,11 +64,26 @@
         </div>
       </nav>
     </header>
+    <!-- popover -->
+    <section class="popoverr">
+      <div class="popover">
+        <img src="images/Avatar-Profile-PNG-Photos.png" width="30%" />
+        <div class="popover-menu">
+          <header class="popover-header">
+            <img src="images/Avatar-Profile-PNG-Photos.png" width="30%" />
+            <div>
+              <h2>Abdillah Naufal</h2>
+              <h3>Jangan Lupa Follow Sosial Aku Yaa</h3>
+            </div>
+          </header>
+        </div>
+      </div>
+    </section>
+    <!-- Tombol scroll up -->
+    <a href="#" class="scroll-up-button"
+      ><i class="fa-solid fa-up"></i>&uarr;</a
+    >
     <main id="luxy" data-speed-y="1">
-      <!-- Tombol scroll up -->
-      <a href="#" class="scroll-up-button"
-        ><i class="fa-solid fa-up"></i>&uarr;</a
-      >
       <!-- home section start -->
       <section class="home" id="home">
         <div class="header">
@@ -301,37 +316,43 @@
               <div class="skill">
                 <h3>HTML</h3>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 90%"></div>
+                  <div class="progress-bar html" style="width: 90%"></div>
                 </div>
               </div>
               <div class="skill">
                 <h3>CSS</h3>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 80%"></div>
+                  <div class="progress-bar css" style="width: 90%"></div>
                 </div>
               </div>
               <div class="skill">
                 <h3>JavaScript</h3>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 70%"></div>
+                  <div class="progress-bar js" style="width: 70%"></div>
                 </div>
               </div>
               <div class="skill">
                 <h3>Python</h3>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 60%"></div>
+                  <div class="progress-bar py" style="width: 60%"></div>
                 </div>
               </div>
               <div class="skill">
                 <h3>PHP</h3>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 50%"></div>
+                  <div class="progress-bar php" style="width: 70%"></div>
+                </div>
+              </div>
+              <div class="skill">
+                <h3>Kotlin</h3>
+                <div class="progress">
+                  <div class="progress-bar kt" style="width: 20%"></div>
                 </div>
               </div>
               <div class="skill">
                 <h3>Laravel</h3>
                 <div class="progress">
-                  <div class="progress-bar" style="width: 40%"></div>
+                  <div class="progress-bar laravel" style="width: 70%"></div>
                 </div>
               </div>
             </div>
@@ -421,16 +442,17 @@
           >
         </div>
         <div class="project-image">
-          <img src="/images/quiz.png" width="95%" alt="" />
+          <img src="/images/Kuliner.png" width="95%" alt="" />
         </div>
         <div class="project-description">
-          <h1>Quiz App</h1>
+          <h1>E Commerce Food App</h1>
           <p>
-            This is an Application of quiz app that i made with pure JavaScript,
-            you can only answer honestly, or ur'e dumb, want to search on google
-            with copas? you can't do it, just try and show me Your IQ!
+            This is an Application of Food web application that i made with VUE
+            JS, you can buy something you'd like to buy here, there's cart also,
+            and form for order and checkouts, this app is made by vuejs so the
+            performance of the app is nice as f*
           </p>
-          <a href="https://abdFal.github.io/Quiz" target="_blank"
+          <a href="https://github.com/abdFal/Kulineran-App-VUE" target="_blank"
             ><button class="button-57" role="button">
               <span class="text">See Details</span><span>Click me</span>
             </button></a
